# paper-analysis

./: .env.example  .gitignore  README.md  pyproject.toml
config/: batch.yaml  discovered_figures.yaml  poc.yaml
src/paper_analysis/: __init__.py  batch.py  batch_evaluate.py  cli.py  combined_analyze_llm.py  combined_prompts.py  combined_schemas.py  config.py  evaluate.py  export.py  pdf_discovery.py  pdf_figures.py  pdf_text_tables.py  plot_type_dispatch.py  postprocess.py  prompts.py  runs_analyze_llm.py  runs_prompts.py  runs_schemas.py  schemas.py  text_analyze_llm.py  text_prompts.py  text_schemas.py
src/paper_analysis/vision/: __init__.py  anthropic_client.py  base.py  openai_client.py
tools/: preview_page.py
